<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCaptureImage"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/capture_image"
        android:backgroundTint="@color/googleBlue"
        app:cornerRadius="30dp"
        android:textStyle="bold"
        app:iconSize="30dp"
        app:icon="@drawable/camera_icon"
        app:iconGravity="textStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectFromGallery"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/select_from_gallery"
        android:textStyle="bold"
        android:backgroundTint="@color/googleBlue"
        app:cornerRadius="30dp"
        app:iconSize="30dp"
        app:icon="@drawable/gallery_icon"
        app:iconGravity="textStart"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnCaptureImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imagePreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/selected_image"
        app:layout_constraintTop_toBottomOf="@id/btnSelectFromGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
